fix phone align

--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ html, body{
     color: grey;
     margin-top: -5px; 
 }
-.skills p{
+.skills p, .skills a{
     text-align: left;
     color: white;
     opacity: 1;
@@ -311,7 +311,7 @@ hr{
     table tr {
         display: table-cell;
     }
-    .skills p, .skills h1, .secondPersonal p{
+    .skills p, .skills h1, .secondPersonal p, .skills a{
         text-align: center;
     }
     .firstPersonal h1, .firstPersonal p{
